completed all but last 5 works_controller tests

--- a/test/fixtures/works.yml
+++ b/test/fixtures/works.yml
@@ -6,7 +6,7 @@ mariner:
   description: Collaboration w/ Julie Christmas
   publication_year: 2016-04-08
   category: album
-  user_id: dan
+  user: dan
 
 thrill:
   title: Can't Buy a Thrill
